--- a/ContactsManager.UI/ContactsManager.UI.csproj
+++ b/ContactsManager.UI/ContactsManager.UI.csproj
@@ -27,4 +27,7 @@
     <ProjectReference Include="..\ContactsManager.Infrastructure\ContactsManager.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="ContactsManager.IntegrationTests"/>
+  </ItemGroup>
 </Project>
