--- a/ContactsManager.Core/ContactsManager.Core.csproj
+++ b/ContactsManager.Core/ContactsManager.Core.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="EPPlus" Version="7.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="4.0.2-dev-02220" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
