--- a/ContactsManager.UI/ContactsManager.UI.csproj
+++ b/ContactsManager.UI/ContactsManager.UI.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
     <PackageReference Include="Rotativa.AspNetCore" Version="1.3.2" />
     <PackageReference Include="Serilog" Version="4.0.2-dev-02220" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
@@ -31,5 +32,9 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="ContactsManager.IntegrationTests" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 </Project>
